--- a/Python.ipynb
+++ b/Python.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyObdCQxd2E7DhBrjFxhgUUN",
+      "authorship_tag": "ABX9TyP8n7jY+aDUfNPShdcQQxJK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -309,11 +309,11 @@
       ],
       "cell_type": "code",
       "metadata": {
-        "id": "Xt9J65hRvuSg",
-        "outputId": "a9a3f226-0aff-4339-f7a3-58b78f9cb37a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Xt9J65hRvuSg",
+        "outputId": "a9a3f226-0aff-4339-f7a3-58b78f9cb37a"
       },
       "execution_count": 25,
       "outputs": [
@@ -343,11 +343,11 @@
       ],
       "cell_type": "code",
       "metadata": {
-        "id": "Z5chbbX5wKR4",
-        "outputId": "616fa550-3e9f-46ed-df6b-bfd12e1820a9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Z5chbbX5wKR4",
+        "outputId": "616fa550-3e9f-46ed-df6b-bfd12e1820a9"
       },
       "execution_count": 27,
       "outputs": [
@@ -378,11 +378,11 @@
       ],
       "cell_type": "code",
       "metadata": {
-        "id": "4yzYZsffwQpT",
-        "outputId": "4cfb53b9-9fd3-499f-f752-139d021a18e6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "4yzYZsffwQpT",
+        "outputId": "4cfb53b9-9fd3-499f-f752-139d021a18e6"
       },
       "execution_count": 30,
       "outputs": [
@@ -397,10 +397,78 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Object-Oriented Programming (OOP) is a programming paradigm that uses objects and classes to represent real-world entities and their interactions. It's a powerful way to organize and structure your code, making it more reusable and maintainable."
+      ],
+      "metadata": {
+        "id": "HaGd3H_Fw1ss"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Classes: Blueprints for creating objects. They define the attributes (data) and methods (functions) that objects of that class will have."
+      ],
+      "metadata": {
+        "id": "kcYwm48jw4xs"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Dog:\n",
+        "    def __init__(self, name, breed, age):\n",
+        "        self.name = name\n",
+        "        self.breed = breed\n",
+        "        self.age = age\n",
+        "\n",
+        "    def bark(self):\n",
+        "        print(\"Woof!\")\n",
+        "\n",
+        "    def describe(self):\n",
+        "        print(f\"{self.name} is a {self.breed} and is {self.age} years old.\")"
+      ],
+      "metadata": {
+        "id": "nzhlefzZxT86"
+      },
+      "execution_count": 33,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Create a Dog object\n",
+        "my_dog = Dog(\"Buddy\", \"Labrador\", 3)\n",
+        "\n",
+        "# Call methods\n",
+        "my_dog.bark()       # Output: Woof!\n",
+        "my_dog.describe()  # Output: Buddy is a Labrador and is 3 years old."
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "OJ81U1kMwSoF",
+        "outputId": "d93c6d95-b801-4e5c-f753-eae0f161be72"
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Woof!\n",
+            "Buddy is a Labrador and is 3 years old.\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "OJ81U1kMwSoF"
+        "id": "Vx383XmbxMDF"
       },
       "execution_count": null,
       "outputs": []
