--- a/Data_Transformation.ipynb
+++ b/Data_Transformation.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN2kH1SNYKEroMTZSdqF+GB",
+      "authorship_tag": "ABX9TyOr3Xm78W8tT7b3iFb+NGr+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -60,7 +60,7 @@
         "id": "ZsjjPNn_eW5a",
         "outputId": "154645af-ed7c-4e04-e419-4fc299d6810c"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -102,7 +102,7 @@
         "id": "tE1Ch9qte4vw",
         "outputId": "7b625051-c6a8-44bc-dd35-b4f68f9a2b03"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -151,7 +151,7 @@
         "id": "CqpLQVQbfQPn",
         "outputId": "c91e9588-a172-46bb-a4ac-5ad416ec85ba"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -184,7 +184,7 @@
         "id": "_1igK1NrgX3J",
         "outputId": "ce14f132-7371-4125-b28e-138511790600"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -292,7 +292,7 @@
         "id": "o_Orv9kHhdVz",
         "outputId": "705195de-3d57-43ff-c02c-4c81dffc7aa9"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -354,7 +354,7 @@
         "id": "84tFbt18iAa3",
         "outputId": "cf0e55a2-875d-4507-f422-d5d83ef77048"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -383,7 +383,7 @@
         "id": "3aq16H-QiA4z",
         "outputId": "4eaa24ab-ebe3-4b26-cff7-8f92905f58dc"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -426,7 +426,7 @@
       "metadata": {
         "id": "7Bd49xC-jIa-"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -444,7 +444,7 @@
         "id": "YtjMmpYAig-S",
         "outputId": "bd869ecd-9474-431a-849b-6a4c925dad8e"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -487,7 +487,7 @@
         "id": "6Ei5w7R3jQ2l",
         "outputId": "4b4d6b6b-b0f1-41b3-c347-ffe52b867b75"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -512,15 +512,6 @@
       }
     },
     {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "hJHZGrKUiTH1"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "source": [
         "matrix1 = np.array([[1, 2], [3, 4]])\n",
         "matrix2 = np.array([[5, 6], [7, 8]])\n",
@@ -529,13 +520,13 @@
       ],
       "cell_type": "code",
       "metadata": {
+        "id": "aCOtiEZ1jfLV",
+        "outputId": "155b6b0a-fa11-451d-9d6b-0dd3238deb01",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "aCOtiEZ1jfLV",
-        "outputId": "155b6b0a-fa11-451d-9d6b-0dd3238deb01"
+        }
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -549,6 +540,73 @@
           "execution_count": 54
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Determinant\n",
+        "The determinant of a square matrix is a scalar value that provides information about its properties, such as invertibility."
+      ],
+      "metadata": {
+        "id": "s5-V697NIvyx"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "3TebYf4TI59_"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "U2pS7ajJI-qL"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "source": [
+        " import numpy as np\n",
+        "matrix = np.array([[1, 2], [3, 4]])\n",
+        "determinant = np.linalg.det(matrix)\n",
+        "\n",
+        "determinant"
+      ],
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cZnOiMHMI-Rf",
+        "outputId": "a0caab41-f03f-4919-cbf9-11a016de52f1"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "np.float64(-2.0000000000000004)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "SQ4HTO_PIvaq"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
